--- a/angular.json
+++ b/angular.json
@@ -17,21 +17,26 @@
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
-            "tsConfig": "projects/angular-editor/tsconfig.lib.json",
             "project": "projects/angular-editor/ng-package.json"
           },
           "configurations": {
             "production": {
               "tsConfig": "projects/angular-editor/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/angular-editor/tsconfig.lib.json"
             }
-          }
+          },
+          "defaultConfiguration": "production"
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-builders/jest:run",
           "options": {
-            "main": "projects/angular-editor/src/test.ts",
             "tsConfig": "projects/angular-editor/tsconfig.spec.json",
-            "karmaConfig": "projects/angular-editor/karma.conf.js"
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ]
           }
         },
         "lint": {
@@ -59,12 +64,10 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": {
-              "base": "dist/angular-editor-app"
-            },
+            "outputPath": "dist/angular-editor-app",
             "index": "projects/angular-editor-app/src/index.html",
             "polyfills": [
-              "projects/angular-editor-app/src/polyfills.ts"
+              "zone.js"
             ],
             "tsConfig": "projects/angular-editor-app/tsconfig.app.json",
             "assets": [
@@ -77,7 +80,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "projects/angular-editor-app/src/styles.scss"
+              "projects/angular-editor-app/src/styles.scss",
+              "dist/angular-editor/prebuilt-themes/bookerly.scss"
             ],
             "scripts": [],
             "extractLicenses": false,
@@ -88,30 +92,27 @@
           },
           "configurations": {
             "production": {
-              "fileReplacements": [
-                {
-                  "replace": "projects/angular-editor-app/src/environments/environment.ts",
-                  "with": "projects/angular-editor-app/src/environments/environment.prod.ts"
-                }
-              ],
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "namedChunks": false,
-              "extractLicenses": true,
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
+                  "maximumWarning": "500kB",
+                  "maximumError": "1MB"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "6kb"
+                  "maximumWarning": "4kB",
+                  "maximumError": "8kB"
                 }
-              ]
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
             }
-          }
+          },
+          "defaultConfiguration": "production"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -121,6 +122,9 @@
           "configurations": {
             "production": {
               "buildTarget": "angular-editor-app:build:production"
+            },
+            "development": {
+              "buildTarget": "angular-editor-app:build:development"
             }
           }
         },
@@ -139,13 +143,16 @@
             "karmaConfig": "projects/angular-editor-app/karma.conf.js",
             "assets": [
               "projects/angular-editor-app/src/favicon.ico",
-              "projects/angular-editor-app/src/assets"
+              {
+                "glob": "**/*",
+                "input": "projects/angular-editor/assets/",
+                "output": "assets/"
+              }
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "projects/angular-editor-app/src/styles.css",
-              "@angular-elements/rich-text-editor/themes/bookerly/bookerly.scss",
-              "@angular-elements/rich-text-editor/assets/material-symbols/material-symbols.css"
+              "projects/angular-editor-app/src/styles.scss",
+              "dist/angular-editor/prebuilt-themes/bookerly.scss"
             ],
             "scripts": []
           }
